[tool.poetry]
name = "strava-intelligence"
version = "0.1.0"
description = "A Python toolkit for analyzing and visualizing your Strava activities"
authors = ["rsanchezmo"]
readme = "README.md"
packages = [{ include = "strava" }]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.0"
python-dotenv = "^1.2.1"
pydantic = "^2.12.0"
pandas = "^2.3.0"
geopandas = "^1.1.0"
matplotlib = "^3.7.0"
numpy = "^2.3.0"
scipy = "^1.16.0"
polyline = "^2.0.0"
contextily = "^1.4.0"
shapely = "^2.0.0"
fastparquet ="^2024.11.0"
dotenv = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
